--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-new/call-to-action-new.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-new/call-to-action-new.component.html
@@ -31,6 +31,7 @@
                                         <small>How you'll find it in Page Builder. <span class="badge badge-warning">*Required</span></small>
                                     </label>
                                     <input type="text"
+                                           required
                                            class="form-control"
                                            [class.invalid]="!f.name.valid && f.name.touched"
                                            formControlName="name">
@@ -61,9 +62,17 @@
                                     <ckeditor [formControl]="newCTAForm.controls['body']"
                                               [config]="CkeditorConfig"
                                               [class.invalid]="!f.body.valid && f.body.touched"
+                                              maxlength="550"
+                                              required
                                               [readonly]="false"
+                                              [(ngModel)]="body"
                                               debounce="500">
                                     </ckeditor>
+                                    <p class="help-block alert alert-danger text-center"
+                                       [hidden]="f.body.valid">
+                                        Body is required and cannot have more than <b>550</b> characters. There are currently
+                                        <b>{{ body.length }}</b> characters
+                                    </p>
                                 </div>
 
                                 <div class="form-group">
