--- a/src/app/components/admin/admin-core/admin-files/admin-files.component.css
+++ b/src/app/components/admin/admin-core/admin-files/admin-files.component.css
@@ -1,6 +1,7 @@
 .file-gallery {
     display: grid;
     grid-gap: 1em;
+    /* autoprefixer: off */
     grid-auto-rows: 12rem;
     grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
 }
