--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -67,10 +67,47 @@ ol.breadcrumb, li.breadcrumb-item {
     font-size: 18px;
 }
 
+.image-container {
+    float: right;
+    min-height: 305px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 img.photoURL {
     max-width: 450px;
     float: right;
     margin: 0 0 1em 1em;
+}
+
+.ingo_social_widget {
+    background-color: #fff;
+    width: 450px !important;
+    height: 305px !important;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    line-height: 1.2;
+    letter-spacing: normal;
+    position: relative;
+    margin: 0 auto;
+    border: 1px solid #4da3c6;
+    color: #777;
+}
+
+.widgetSnippet, #widgetSnippet {
+    width: 450px;
+    height: auto;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 h2.card-sec-title {
